--- a/app/src/main/res/layout/fragment_worker_profile.xml
+++ b/app/src/main/res/layout/fragment_worker_profile.xml
@@ -88,6 +88,18 @@
                     android:layout_marginTop="8dp"
                     app:editable="no" />
             </LinearLayout>
+
+            <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                android:textColor="@color/redSquareColor"
+                android:text="BOOK"
+                android:id="@+id/book"
+                android:visibility="gone"
+                android:background="@android:color/white"
+                android:padding="12dp"
+                android:textSize="16sp"
+                android:layout_gravity="bottom|end|right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </FrameLayout>
 
         <LinearLayout
