--- a/app/src/main/res/layout/include_worker_profile_details.xml
+++ b/app/src/main/res/layout/include_worker_profile_details.xml
@@ -630,6 +630,46 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/worker_profile_experience_type_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/ic_mode_edit_black_24dp"
+                android:tint="@color/redSquareColor"
+                android:visibility="gone" />
+
+            <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                android:id="@+id/worker_profile_experience_type_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/worker_experience_types"
+                android:textColor="@color/blackSquareColor" />
+
+            <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+                android:id="@+id/worker_details_bullet_list_experience_type"
+                style="@style/caption_gray_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/worker_profile_experience_type_title"
+                android:layout_marginTop="8dp"
+                android:textSize="14sp"
+                app:josefin_style="italic" />
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="bottom"
+            android:background="@android:color/darker_gray" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="14dp"
+            android:orientation="vertical">
+
+            <ImageView
                 android:id="@+id/worker_profile_companies_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
