--- a/app/src/main/res/menu/menu_worker_matches_map.xml
+++ b/app/src/main/res/menu/menu_worker_matches_map.xml
@@ -2,13 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="@string/worker_matches_menu_tune"
-        app:showAsAction="always"
-        android:id="@+id/worker_tune"
-        android:icon="@drawable/ic_worker_tune" />
-    <item
         android:title="@string/worker_matches_menu_map"
         android:id="@+id/worker_list"
         app:showAsAction="always"
-        android:icon="@drawable/ic_view_list" />
+        android:icon="@drawable/ic_close" />
 </menu>
