--- a/app/src/main/res/layout/fragment_price_plan.xml
+++ b/app/src/main/res/layout/fragment_price_plan.xml
@@ -116,7 +116,7 @@
 
             <!-- Content -->
 
-            <!-- Remaining -->
+            <!-- Subscription Credits -->
             <android.support.v7.widget.CardView
                 app:cardElevation="4dp"
                 android:id="@+id/remaining_display"
@@ -144,7 +144,6 @@
                         android:layout_height="wrap_content" />
 
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        android:text="(Expires 24/03)"
                         android:textColor="@color/blackSquareColor"
                         android:textSize="12sp"
                         app:josefin_style="italic"
@@ -182,7 +181,7 @@
                     android:layout_height="2dp"/>
             </android.support.v7.widget.CardView>
 
-            <!-- Top Up -->
+            <!-- Top Up Credits -->
             <android.support.v7.widget.CardView
                 app:cardElevation="4dp"
                 android:id="@+id/top_up_display"
@@ -210,7 +209,6 @@
                         android:layout_height="wrap_content" />
 
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                        android:text="(Expires 10/04)"
                         android:textColor="@color/blackSquareColor"
                         android:textSize="12sp"
                         android:id="@+id/topup_expiration"
