--- a/app/src/main/res/layout/fragment_price_plan.xml
+++ b/app/src/main/res/layout/fragment_price_plan.xml
@@ -35,7 +35,7 @@
 
             <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                 android:textColor="@android:color/white"
-                android:text="Bill due 23/04/2019"
+                android:text="Bill due ..."
                 android:textSize="14sp"
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="12dp"
