--- a/app/src/main/res/layout/dialog_crn.xml
+++ b/app/src/main/res/layout/dialog_crn.xml
@@ -16,7 +16,7 @@
         android:background="@color/whiteSquareColor"
         android:layout_width="30dp"
         android:layout_height="30dp"/>
-        </LinearLayout>/
+        </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
