--- a/app/src/main/res/layout/fragment_my_account_billing_timesheets.xml
+++ b/app/src/main/res/layout/fragment_my_account_billing_timesheets.xml
@@ -1,10 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/medium_padding"
-    android:paddingStart="@dimen/medium_padding"
-    tools:context="construction.thesquare.worker.myaccount.ui.activity.MyAccountBillingActivity$PlaceholderFragment">
+    android:paddingStart="@dimen/medium_padding">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
